# Multi-Modality-SNPCorrelateImage

./: .gitignore  LICENSE  README.md  base.py  bert.ipynb  clear_dirs.py  divide_dataset.py  gwis.py  init.py  init_dirs.py  predict.py  pyproject.toml  test.py  test_model.py  train.py  train_multi.py  try.py  visualize.py  visualize_dataset.py  visualize_dataset_custom.py
archive/: gwis_statistic.py  participants_gene_regions_regenerate_info.py  participants_regularize.py  participants_transpose_split_with_threads.py
archive/data_pretreatment/gene/: gene_group_participants.py  participants_merge.py  participants_table_snps_divide.py
archive/data_pretreatment/label/: build_new_vcf_headers.py  distribute.py  fake_label.py  myopia.py  ukb_screen.py
data_pretreatment/gene/: base.py  count_gene_freq.py  count_gene_num.py  fake_snp.py  filter_alleles.sh  filter_glc_snps.py  filter_participants.py  filter_participants_with_cyvcf2.py  filter_snps.py  generate_fake_snp.py  gwas_filter_chosen_snps_glc.py  gwas_filter_snps.py  gwas_filter_snps_high_myopia.py  gwis_statistic.py  gzip_vcf.sh  id_barcode_trans.py  index_gzip_vcf.sh  merge_participants.py  normalize.py  participants_frequency_snps_to_gene_regions.py  participants_gene_regions_filter_snps_with_selected_gene.py  participants_gene_regions_filter_with_chosen_snps.py  participants_id_barcode_trans.py  participants_snps_dataset_merge.py  participants_snps_filter_snps_with_frequency.py  participants_snps_filter_with_chosen_snps.py  participants_snps_filter_with_frequency.py  participants_transpose.py  participants_transpose_merge.py  participants_transpose_split.py  participants_transpose_with_large_ram.py  regularize.py  select_snps_by_weight.py  speed_up_full.py  speed_up_full_with_chosen_snps.py  transpose.py  transpose_merge.py  transpose_split.py  transpose_split_with_threads.py  transpose_with_large_ram.py  (+4 more)
data_pretreatment/image/: copy_file.py  count_mean_std.py  count_students.py  filter.py  filter2.py  filter3.py  filter4.py  filter_glc.py  ln.py
data_pretreatment/label/: barcodes.py  base.py  build_new_vcf_headers.py  init.py  one_eye_statistic.py  qc.py  two_eyes_statistic.py  undersample.py
data_pretreatment/link/: build_link_from_record.py  mk_link_record.py  remk_link.py
data_pretreatment/statistic/: eye_all.py  eye_filter_one.py  eye_filter_two.py  gwis.py  snp_weights.py  snp_weights_compare.py  snps_frequency.py  snps_selected.py
docs/: data.md  data_format.md  data_pretreatment.md  experiments.md  model.md  plan.md  test.md  tools.md  train.md  workflow.md
models/: Attention.py  Image.py  MultiModal.py  RETFound.py  SNP.py  SwinTransformer.py  __init__.py  performer_pytorch.py  reversible.py
models/ConvNeXt/: __init__.py  isotropic.py  with_attention.py
utils/: __init__.py  cam.py  datasets.py  dir.py  early_stopping.py  encode.py  finish.py  gene.py  img.py  interpretability.py  lists.py  metrics.py  mk_data_loaders.py  multi_gpus.py  name.py  normal.py  participants.py  records.py  task.py  time.py  transforms.py  workflow.py
utils/compute/: __init__.py  metrics.py  normal.py
utils/image/: __init__.py  blur.py  noise.py
utils/text_handler/: __init__.py  name.py
